exception handling and response entity return